# wealthwise-app

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  package.json
frontend/: .env.example  (+10 more)
services/market-data/: .env.example  .env.local.example  Dockerfile  main.py  pyproject.toml  requirements.txt
services/market-data/app/: main.py
services/market-data/app/api/: routes.py  schemas.py
services/market-data/app/clients/: yahoo_finance.py
services/market-data/app/core/: config.py
services/market-data/tests/: conftest.py  test_config_unit.py  test_health.py  test_quotes.py  test_quotes_service_unit.py  test_yahoo_finance_client.py
services/positions/: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  alembic.ini  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
services/positions/app/: main.py
services/positions/migrations/: env.py  script.py.mako
services/positions/prisma/: schema.prisma
services/positions/src/: index.ts  pricePoller.ts
services/positions/tests/: conftest.py  test_auth.py  test_config_unit.py  test_engine.py  test_engine_unit.py  test_health.py  test_main.py  test_main_lifespan_and_middleware.py  test_main_unit.py  test_market_data_unit.py  test_migrations_unit.py  test_positions.py  test_price_poller_unit.py  test_quote_snapshots_repo_unit.py  test_quotes.py  test_realtime_unit.py  test_repositories_exception_branches.py  test_repositories_positions_unit.py  test_repositories_users_unit.py  test_routes_branches.py  test_routes_more_branches.py  test_routes_quote_prefetch_failure.py  test_security.py
(+251 files in other folders)
