[project]
name = "wealthwise-market-data"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-q",
  "--disable-warnings",
  "--maxfail=1",
  "--cov=app",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=85",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/api/routes.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = "app"