[project]
name = "wealthwise-positions"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "aiosqlite>=0.20.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "B008",
  "UP017",
]

[tool.coverage.run]
branch = true
omit = [
    "app/db/migrations.py"
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "asyncio: mark a test as requiring asyncio",
]